# hydroconf

./: Cargo.toml  Justfile  Makefile  README.md  run-travis-job.sh
src/: env.rs  hydro.rs  lib.rs  settings.rs  sources.rs  tracing.rs  utils.rs
tests/: hydration.rs
tests/data/: .env
tests/data/config/: settings.toml
tests/data2/: .env.development
tests/data2/config/: .secrets.toml  settings.toml
tests/data3/: .env  .env.production
tests/data4/: settings.local.toml
tests/data_custom_filename/: base_settings.local.toml
tests/data_custom_filename/config/: base_settings.toml
