[package]
name = "hydroconf"
version = "0.2.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
license = "ISC"
edition = "2018"

description = "Effortless configuration management for Rust."
homepage = "https://github.com/rubik/hydroconf"
repository = "https://github.com/rubik/hydroconf"
keywords = ["configuration", "12factorapp", "settings"]

[features]
tracing = ["dep:tracing"]

[dependencies]
config = "0.13.3"
dotenv-parser = ">=0.1.2"
serde = "1.0"
tracing = { version = "0.1.37", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
