[package]
name = "hydroconf"
version = "0.2.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
license = "ISC"
edition = "2018"

description = "Effortless configuration management for Rust."
homepage = "https://github.com/rubik/hydroconf"
repository = "https://github.com/rubik/hydroconf"
keywords = ["configuration", "12factorapp", "settings"]

[features]
json = ["config/json"]
yaml = ["config/yaml"]
ini = ["config/ini"]
json5 = ["config/json5"]

[dependencies]
config = {version = ">=0.13.3, <0.14", default-features = false, features = ["toml"]}
dotenv-parser = ">=0.1.2"
log = "0.4.20"
normpath = "1.1.1"
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
